--- a/webbanhangs/webbanhangs/Web.config
+++ b/webbanhangs/webbanhangs/Web.config
@@ -96,7 +96,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MyData" connectionString="data source=DESKTOP-SS5D111\ANHLE;initial catalog=webbanrau;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MyData" connectionString="data source=DESKTOP-4S38BSF\MSSQLSERVER1;initial catalog=webbanrau;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
