--- a/webbanhangs/webbanhangs/webbanhangs.csproj
+++ b/webbanhangs/webbanhangs/webbanhangs.csproj
@@ -164,6 +164,8 @@
     <Compile Include="Context\sysdiagram.cs" />
     <Compile Include="Context\TaiKhoan.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoaiSanPhamController.cs" />
+    <Compile Include="Controllers\SanPhamController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -4321,6 +4323,10 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\DangNhap.cshtml" />
+    <Content Include="Views\Home\DangKy.cshtml" />
+    <Content Include="Views\LoaiSanPham\PhanLoaiSanPham.cshtml" />
+    <Content Include="Views\SanPham\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
