--- a/webbanhangs/webbanhangs/webbanhangs.csproj
+++ b/webbanhangs/webbanhangs/webbanhangs.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Context\SanPham.cs" />
     <Compile Include="Context\sysdiagram.cs" />
     <Compile Include="Context\TaiKhoan.cs" />
+    <Compile Include="Controllers\GioHangController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoaiSanPhamController.cs" />
     <Compile Include="Controllers\SanPhamController.cs" />
@@ -4327,6 +4328,10 @@
     <Content Include="Views\Home\DangKy.cshtml" />
     <Content Include="Views\LoaiSanPham\PhanLoaiSanPham.cshtml" />
     <Content Include="Views\SanPham\Details.cshtml" />
+    <Content Include="Views\GioHang\Giohang.cshtml" />
+    <Content Include="Views\GioHang\GiohangPartial.cshtml" />
+    <Content Include="Views\GioHang\DatHang.cshtml" />
+    <Content Include="Views\GioHang\XacnhanDonHang.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
